Sun Jun 01 09:14:06 2003  George Lebl <jirka@5z.com>

	* lib/number_theory/modulus.gel: add
	  SilverPohligHellmanWithFactorization function which does the
	  discrete log but knowing the factorization of q-1, so if you do
	  a bunch of discrete logs this can be a lot faster.

Sat May 31 15:11:04 2003  George Lebl <jirka@5z.com>

	* lib/numbertheory/modulus.gel: add IsPrimitiveModWithPrimeFactors,
	  which is like IsPrimitiveMod, but we already put in the
	  prime factors of q-1, so this is faster if we are testing a whole
	  bunch of numbers or if we know factorization of q-1 beforehand.
	  Use this for the primitive element finding routines.
	  Also add SqrtModPrime which computes square roots modulo a prime.

	* src/gnome-genius.c: Fix saving and opening of files (DOH!) also
	  set the filename and the directory each time when openning the
	  fileselector so that you don't have to retype everything.

	* src/calc.c, src/funclib.c: rename an easter egg to prevent
	  name conflict

Fri May 30 17:13:43 2003  George Lebl <jirka@5z.com>

	* src/gnome-genius.c: print out errors/infos after program run.  DOH!

Wed May 28 16:57:25 2003  George Lebl <jirka@5z.com>

	* Release 0.5.4

	* src/gnome-genius.desktop.in: add Office category keyword

Wed May 28 16:37:12 2003  George Lebl <jirka@5z.com>

	* src/gnome-genius.c: implement save and save as (at least
	  somewhat sanely).  Cut/Copy/Paste are now implemented for
	  the program panes.  If we are leaving the program the 'are you
	  sure' message takes into account if there are any unsaved
	  progs.

Wed May 28 13:32:39 2003  George Lebl <jirka@5z.com>

	* src/gnome-genius.c: smarter dialog behaviour for open and load,
	  and add a reload menu item and also do some de-deprecation

Wed May 28 10:17:10 2003  George Lebl <jirka@5z.com>

	* src/gnome-genius.c: cleanup the program stuff a bit, add a programs
	  menu and make selected program stick even if you switch to console
	  to be able to run multiple times easily.
